syntax = "proto3";

package com.example.trainstationapp.session;

option java_multiple_files = false;
option java_package = "com.example.trainstationapp.data.datastore";

message OAuth {
  string accessToken = 1;
  string tokenType = 2;
  int64 userId = 3;
}

message Jwt {
  string token = 1;
}